...

            <Button
                android:id="@+id/button_bodyfat_type"
                style="@style/FitnessCalculatorTheme.Button.Borderless"
                android:layout_width="72dp"
...

                <RadioButton
                    android:id="@+id/radio_button_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edittext_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/textview_pectoral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edittext_pectoral"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/textview_abdominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edittext_abdominal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/textview_thigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edittext_thigh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/textview_triceps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edittext_triceps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/textview_subscapular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edittext_subscapular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/textview_suprailiac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edittext_suprailiac"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/textview_axilla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edittext_axilla"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
