...
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edittext_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/kilograms"
                    android:imeOptions="actionGo"
...
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edittext_height"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/centimeters"
                        android:imeOptions="actionGo"
                        android:inputType="numberDecimal"
                        style="@style/FitnessCalculatorTheme.EditText.Normal"/>
...
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edittext_height_inches"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/inches"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        style="@style/FitnessCalculatorTheme.EditText.Normal"/>
...
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edittext_calorie_intake"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="Calories"
                    android:imeOptions="actionGo"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/muscle_gain"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_button_fat_loss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/fat_loss"
                    android:textColor="@color/white" />

...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maintain"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_button_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/custom"
                    android:textColor="@color/white" />

...
                android:visibility="invisible"
                tools:visibility="visible"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="8sp" />

            <LinearLayout
                android:id="@+id/custom_macro_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
...
            android:paddingRight="16dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/button_unit"
        style="@style/FitnessCalculatorTheme.Button.Borderless.Small"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@+id/button_clear"
        android:elevation="4dp"
        android:text="@string/metric" />

    <Button
        android:id="@+id/button_clear"
        style="@style/FitnessCalculatorTheme.Button.Borderless.Small"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
...
