...

    <string name="title_toolbar_general">General</string>

    <string name="title_fragment_body">Body</string>
    <string name="title_fragment_strength">Strength</string>

    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>

    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_normal">Normal</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obese">Obese</string>
...
    <string name="triceps">Triceps</string>
    <string name="subscapular">Subscapular</string>
    <string name="suprailiac">Suprailiac</string>
    <string name="axilla">Axilla</string>

    <string name="bodyfat">Bodyfat</string>
    <string name="bf_7_point">7 Point</string>
    <string name="bf_3_point">3 Point</string>
    <string name="millimeters">Millimeters</string>

    <string name="percent_protein">P%</string>
    <string name="percent_carbohydrates">C%</string>
    <string name="percent_fat">F%</string>
    <string name="percentage_error">Combined percentages must equal 100</string>
...
