...
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="#000000"
            tools:src="@drawable/bmi_image" />

        <lecho.lib.hellocharts.view.PieChartView
            android:id="@+id/chart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
...
            android:id="@+id/title2_textview"
            fontPath="fonts/Raleway-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="32dp"
            android:layout_toLeftOf="@id/side_layout"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:visibility="gone"
            tools:ignore="MissingPrefix"
            tools:text="@string/body_mass_index"
...
